# CoRAG

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.pi.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: config.yaml  prompts.yaml
deploy/cloudflare/: DEPLOY.md  config.yml  docker-compose.tunnel.yml
docs/: architecture.md  evaluation.md  prompts.md  troubleshooting.md
examples/: 01_complex_query.sh
frontend/: Dockerfile  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/api-keys/: page.tsx
frontend/app/(app)/ask/: page.tsx
frontend/app/(app)/billing/: page.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/documents/: page.tsx
frontend/app/(app)/usage/: page.tsx
frontend/app/(auth)/sign-in/: page.tsx
frontend/app/(auth)/sign-up/: page.tsx
frontend/app/(marketing)/pricing/: page.tsx
frontend/app/api/billing/checkout/: route.ts
frontend/app/api/billing/portal/: route.ts
frontend/app/api/core/[...path]/: route.ts
frontend/app/api/sign-up/: route.ts
frontend/app/api/webhooks/stripe/: route.ts
frontend/src/: auth.ts
frontend/src/config/: plans.ts
frontend/src/lib/: types.ts
frontend/src/server/: billing.ts  identity.ts
frontend/src/types/: next-auth.d.ts
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init.py  0002_document_text.py  0003_api_keys.py
services/api/docker/: postgres-init.sh
services/api/src/corag_cloud/: __init__.py  api_keys.py  config.py  deps.py  main.py  provision.py  rate_limit.py  security.py
services/api/src/corag_cloud/billing/: __init__.py  access.py  plans.py  sync.py
services/api/src/corag_cloud/db/: pool.py
services/api/src/corag_cloud/ingest/: __init__.py  extract.py  worker.py
services/api/src/corag_cloud/retrieval/: __init__.py  openai_embedder.py  pgvector_index.py
services/api/src/corag_cloud/routers/: api_keys_router.py  ask.py  documents.py  health.py  internal.py  usage.py  v1.py
services/api/src/corag_cloud/service/: ask_service.py
services/api/tests/: conftest.py  stubs.py  test_api_keys.py  test_app.py  test_ask_endpoint.py  test_billing_sync.py  test_documents_flow.py  test_embedder.py  test_extract.py  test_pipeline_pgvector.py  test_provision_login.py  test_rls_isolation.py
src/corag/: __init__.py
src/corag/cli/: __init__.py  answer.py  build_index.py  eval.py  ingest.py  search.py  serve.py
src/corag/controller/: __init__.py  base.py  openai_controller.py  prompts.py
src/corag/corpus/: __init__.py  chunker.py  document.py  ingest.py
src/corag/evaluation/: __init__.py  datasets.py  evaluator.py  metrics.py
src/corag/generation/: __init__.py  synthesizer.py
src/corag/indexing/: __init__.py  embedder.py  index.py
src/corag/retrieval/: __init__.py  interfaces.py  pipeline.py  state.py
src/corag/utils/: __init__.py  text.py
tests/: __init__.py  conftest.py  stubs.py  test_controller.py  test_corpus.py  test_datasets.py  test_evaluation.py  test_generation.py  test_indexing.py  test_pipeline.py  test_retrieval.py  test_serve.py
