[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corag-cloud"
version = "0.1.0"
description = "CoRAG Cloud - multi-tenant SaaS backend for the CoRAG retrieval pipeline"
requires-python = ">=3.11"
license = { text = "MIT" }
# corag (the research package at the repo root) is a monorepo path dependency;
# install both together: pip install -e . -e services/api
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.0",
    "httpx>=0.27.0",
    "pypdf>=4.2.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
